# UltraFastFileSearch-Rust

./: .geiger.toml  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REUSE.toml  SECURITY.md  audit.toml  build.rs  clippy.toml  codecov.yml  deny.toml  install.sh  justfile  libprofile.rlib  metadata.json  release-plz.toml  rust-toolchain.toml  rust-toolchain.toml-e  rustfmt.toml  test_scf
LOG/: Output  (+5 more)
crates/uffs-broker/: Cargo.toml  build.rs
crates/uffs-broker/src/: broker.rs  main.rs  snapshot_lease.rs
crates/uffs-broker/src/broker/: service.rs
crates/uffs-broker/src/broker/snapshot_manager/: mod.rs  vss_helper.rs  vss_self_test.rs
crates/uffs-broker/src/snapshot_lease/: tests.rs
crates/uffs-cli/: Cargo.toml  build.rs  console
crates/uffs-cli/src/: args.rs  args_help.rs  commands.rs  dispatch.rs  main.rs
crates/uffs-cli/src/commands/: aggregate.rs  daemon_mgmt.rs  daemon_status.rs  daemon_tiering.rs  deleted.rs  elevation.rs  index.rs  info.rs  mcp_mgmt.rs  raw_io.rs  raw_io_windows.rs  snapshot.rs  spinner.rs  stats.rs  system_status.rs
crates/uffs-cli/src/commands/mcp_mgmt/: mcp_process.rs  mod.rs
crates/uffs-cli/src/commands/output/: filter.rs  mod.rs  output_tests.rs  parity.rs  row_writer.rs  streaming.rs  types.rs
crates/uffs-cli/src/commands/search/: daemon.rs  dispatch.rs  drive_search.rs  live.rs  mft_file.rs  mod.rs  multi_drive.rs  single_file.rs  streaming.rs  streaming_io.rs  util.rs
crates/uffs-cli/src/commands/system_status/: mod.rs  process_scan.rs
crates/uffs-cli/src/commands/uninstall/: analyze.rs  args.rs  coverage.rs  effects.rs  mod.rs  plan.rs  remove.rs  render.rs  sweep.rs
crates/uffs-cli/src/commands/update/: acquire.rs  binaries.rs  mod.rs  model.rs  plan.rs  procinfo.rs  winget.rs  winget_discover.rs
crates/uffs-cli/tests/: cli_integration.rs
crates/uffs-client/: Cargo.toml
crates/uffs-client/src/: broker_probe.rs  connect.rs  connect_autostart.rs  connect_keepalive.rs  connect_logging.rs  connect_platform.rs  connect_sync.rs  connect_sync_platform.rs  connect_sync_tests.rs  connect_tests.rs  daemon_child.rs  daemon_ctl.rs  daemon_spawn.rs  error.rs  format.rs  lib.rs  mcp_pid.rs  protocol.rs  shmem.rs  shmem_tests.rs  stdout_kind.rs  types.rs  verify.rs  windows_deadline.rs
crates/uffs-client/src/protocol/: cli_args.rs  cli_args_helpers.rs  mod.rs  response.rs  response_status.rs  search_params.rs  tests.rs
crates/uffs-client/src/schema/: field_metadata.rs  field_tests.rs  mod.rs
crates/uffs-content/: Cargo.toml  build.rs
crates/uffs-content-protocol/: Cargo.toml
crates/uffs-content-protocol/proptest-regressions/: manifest.txt
crates/uffs-content-protocol/src/: codec.rs  error.rs  lib.rs  manifest.rs  path_encoding.rs  state.rs
crates/uffs-content-protocol/src/frame/: content_chunk.rs  control.rs  file_ack.rs  file_begin.rs  file_deferred.rs  file_end.rs  file_failed.rs  job_begin.rs  job_end.rs  mod.rs  stream_reader.rs  tests.rs
crates/uffs-content-protocol/tests/: golden_fixtures.rs
crates/uffs-content-reader/: Cargo.toml  build.rs
crates/uffs-content-reader-protocol/: Cargo.toml
crates/uffs-content-reader-protocol/src/: codec.rs  lib.rs
crates/uffs-content-reader/src/: main.rs  reader.rs
crates/uffs-content-reader/src/reader/: logical.rs  pipe_server.rs  read_plan.rs
crates/uffs-content/src/: lib.rs  main.rs
crates/uffs-content/src/job/: candidate_source.rs  content_source.rs  ephemeral_daemon.rs  intake.rs  manifest_builder.rs  mod.rs  reader_client.rs  registry.rs  self_test.rs  snapshot_client.rs  tests.rs  vss_job.rs  vss_orchestrator.rs  window.rs  workflow.rs
crates/uffs-content/src/job/workflow/: emit.rs  pipeline.rs
crates/uffs-content/src/run/: failure_log.rs  mod.rs  summary.rs  tests.rs
crates/uffs-content/src/serve/: command_pipe.rs  mod.rs  pipe_io.rs  stream.rs
crates/uffs-content/tests/: e2e_dir_walk_parity_fake_reader.rs  e2e_real_vss_content_reader.rs
crates/uffs-content/tests/support/: fixture_tree.rs  mod.rs  plain_walk.rs  test_consumer.rs
crates/uffs-daemon/: Cargo.toml  build.rs
crates/uffs-daemon/src/: broker_client.rs  config.rs  events.rs  handler.rs  handler_blob.rs  handler_csv_blob_tests.rs  handler_diff.rs  handler_paths_blob_tests.rs  index.rs  ipc.rs  lib.rs  lifecycle.rs  live_update.rs  main.rs  protocol.rs  startup.rs
crates/uffs-daemon/src/cache/: cursor_store.rs  pressure.rs
crates/uffs-daemon/src/index/: aggregation.rs  constructors.rs  diff.rs  loading.rs  mod.rs  physical_order.rs  predicates.rs  projection.rs  search.rs  search_output_config.rs  search_tests.rs  stats.rs  tests.rs
crates/uffs-daemon/tests/: ipc_integration.rs
crates/uffs-diag/: Cargo.toml  build.rs
crates/uffs-diag/src/: lib.rs  uffs_mft_helpers_windows.rs
crates/uffs-diag/src/parity/: mod.rs  stats.rs
crates/uffs-gui/: Cargo.toml
crates/uffs-gui/src/: main.rs
crates/uffs-mcp/: Cargo.toml  build.rs
crates/uffs-mcp/src/: cookbook.rs  error.rs  handler.rs  http.rs  lib.rs  lib_tests.rs  main.rs  main_tests.rs  pid.rs  process.rs  resources.rs  roots.rs  schemas.rs  server.rs  stats.rs  text.rs  types.rs
crates/uffs-mcp/src/handler/: definitions.rs  instructions.rs  mod.rs  prompts.rs
crates/uffs-mcp/src/tools/: aggregate.rs  drives.rs  facet_values.rs  info.rs  mod.rs  search.rs  status.rs
crates/uffs-mcp/tests/: mcp_protocol.rs
crates/uffs-security/: Cargo.toml
crates/uffs-security/src/: crypto.rs  fs.rs  keystore.rs  lib.rs  pipe.rs  runtime_dir.rs
crates/uffs-security/src/fs/: win.rs
crates/uffs-security/src/runtime_dir/: tests.rs
crates/uffs-statusfmt/: Cargo.toml
crates/uffs-statusfmt/src/: lib.rs
crates/uffs-text/: Cargo.toml  README.md
crates/uffs-text/src/: case_fold.rs  lib.rs  trigram_key.rs
crates/uffs-time/: Cargo.toml  README.md
crates/uffs-time/src/: lib.rs
crates/uffs-vss-requestor/: Cargo.toml  build.rs
crates/uffs-vss-requestor/native/: vss_shim.cpp  vss_shim.h
crates/uffs-vss-requestor/src/: ffi.rs  main.rs  pipe.rs  protocol.rs  run.rs  snapshot.rs
(+615 files in other folders)
