# ============================================================================
# uffs-broker: Windows Access Broker
# ============================================================================
# Tiny Windows service that provides elevated MFT handles to the daemon.
# The daemon runs as a normal user; the broker runs elevated and hands
# out read-only volume handles on request.
# ============================================================================

[package]
name = "uffs-broker"
description = "UFFS Access Broker ŌĆö Windows service for elevated MFT handle brokering"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
# Intentionally NOT published.  `uffs-broker` is a Windows-only `[[bin]]`
# (elevated handle vendor) ŌĆö there is no library API.  `cargo install
# uffs-broker` would install a standalone Windows handle-broker binary,
# which is meaningless outside the UFFS daemon pairing.  Reserve the name
# on crates.io to prevent squatting, but never carry content.  See
# deep-dive in `docs/refactor/crates-io-publishability-deep-dive.md` ┬¦7.5.
publish.workspace = true

# Phase R6 of `release-automation-plan.md` step 3 ŌĆö docs.rs build config.
# `uffs-broker` is a Windows-elevated handle broker; on non-Windows the
# binary's `main()` short-circuits.  Override `default-target` to the MSVC
# triple so docs.rs renders the Windows API integration that's the entire
# point of this crate.  See `uffs-time/Cargo.toml` for the rationale on
# `--cfg docsrs`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-pc-windows-msvc"]
default-target = "x86_64-pc-windows-msvc"

[[bin]]
name = "uffs-broker"
path = "src/main.rs"

# Windows-only deps: the elevated handle-broker logic in `broker.rs` is
# fully `#[cfg(windows)]`, so its supporting crates compile only on the
# Windows target.  Scoped to `[target.'cfg(windows)'.dependencies]` so
# the bin's non-Windows compilation (a tiny error-message stub in
# `main.rs` that uses only `eprintln!`) doesn't pull in `anyhow`,
# `tracing`, `tracing-subscriber`, `windows`, or the broker protocol ŌĆö
# each would otherwise be visible-but-unused on Linux/macOS and need a
# `use X as _;` marker.  F5 / issue #205.
[target.'cfg(windows)'.dependencies]
anyhow.workspace = true
# `tracing` macros are used heavily in the Windows-only `broker.rs`; the
# non-Windows `main.rs` stub uses `eprintln!`, so tracing is not needed
# off Windows.
tracing.workspace = true
tracing-subscriber.workspace = true
windows.workspace = true
# Wire-protocol types shared with `uffs-daemon::broker_client`.  Lives
# in its own dedicated crate (`crates/uffs-broker-protocol/`) so the
# pure-logic protocol module is cross-platform-testable without
# dragging the Windows FFI surface along.
uffs-broker-protocol.workspace = true
# Shared in-process Authenticode (`WinVerifyTrust`) verification ŌĆö the
# single implementation now lives in `uffs-security` (DRY with the
# self-updater) instead of a broker-local copy.
uffs-security.workspace = true
# Native SCM control for the operator-facing `--status` / `--start` /
# `--stop` commands ŌĆö the same locale-proof primitive the updater uses.
uffs-winsvc.workspace = true

# Embeds the UFFS icon + version info + shared app.manifest into
# `uffs-broker.exe` (see build.rs). A metadata-less binary is both unbranded
# and a mild antivirus false-positive signal.
[build-dependencies]
winresource.workspace = true

[lints]
workspace = true
