# ============================================================================
# uffs-cli: Thin CLI Client
# ============================================================================
# Lightweight command-line client for UFFS.  All heavy lifting (MFT reading,
# polars queries, index management) happens in the daemon (`uffsd`).
# This crate depends only on `uffs-client` for IPC and formatting helpers.
#
# Usage:
#   uffs "*.rs" --drive C
#   uffs stats
#   uffs daemon start
# ============================================================================

[package]
name = "uffs-cli"
description = "Thin command-line client for UFFS (Ultra Fast File Search)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "uffs"
path = "src/main.rs"

[dependencies]
# UFFS client library (IPC, protocol, format helpers)
uffs-client.workspace = true
uffs-mcp.workspace = true

# Async runtime
tokio.workspace = true

# CLI
clap.workspace = true
indicatif.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
dirs-next.workspace = true

# Serialization
serde_json.workspace = true

# Memory allocator - mimalloc is faster than system allocator on all platforms
mimalloc.workspace = true

# ─────────────────────────────────────────────────────────────────────────────
# Lints (inherit from workspace)
# ─────────────────────────────────────────────────────────────────────────────
[lints]
workspace = true

[dev-dependencies]
assert_cmd.workspace = true

