# ============================================================================
# uffs-cli: Thin CLI Client
# ============================================================================
# Lightweight command-line client for UFFS.  All heavy lifting (MFT reading,
# polars queries, index management) happens in the daemon (`uffsd`).
# This crate depends only on `uffs-client` for IPC and formatting helpers.
#
# Usage:
#   uffs "*.rs" --drive C
#   uffs stats
#   uffs daemon start
# ============================================================================

[package]
name = "uffs-cli"
description = "Thin command-line client for UFFS (Ultra Fast File Search)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "uffs"
path = "src/main.rs"

[dependencies]
# UFFS client library (IPC, protocol, format helpers)
uffs-client.workspace = true

# Error handling
anyhow.workspace = true

# Serialization
serde_json.workspace = true
which = "8.0.2"

# ─────────────────────────────────────────────────────────────────────────────
# Lints (inherit from workspace)
# ─────────────────────────────────────────────────────────────────────────────
[lints]
workspace = true

[dev-dependencies]
assert_cmd.workspace = true

