# ============================================================================
# uffs-client: Thin Client Library for UFFS Daemon
# ============================================================================
# All surfaces (CLI, TUI, GUI, MCP) use this crate to communicate with the
# daemon. Handles auto-start, connection, keepalive, and reconnect.
# ============================================================================

[package]
name = "uffs-client"
description = "Thin client library for UFFS daemon — connect, query, lifecycle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Default enables the async `UffsClient` (tokio-based) so existing
# consumers (`uffs-daemon`, `uffs-mcp`) keep working with no change.
# The CLI (`uffs-cli`) overrides with `default-features = false` to
# drop tokio + `ws2_32.dll` from the hot-path binary.
default = ["async"]
async = ["dep:tokio"]

[dependencies]
# Internal
uffs-security.workspace = true

# Async — optional; only pulled when the `async` feature is enabled.
# The sync `UffsClientSync` used by the CLI does not depend on tokio.
# `net` is required for `tokio::net::UnixStream` / named-pipe client.
tokio = { workspace = true, features = ["net"], optional = true }

# Serialization (JSON-RPC)
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Platform dirs (for socket/pipe path)
dirs-next.workspace = true
memmap2.workspace = true

# libc: macOS proc_pidpath (verify.rs) + kill(pid, 0) process check (connect_sync.rs)
[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[lints]
workspace = true
