# ============================================================================
# uffs-content-protocol: Content Service wire-protocol types
# ============================================================================
# Layer 0 Foundation crate. Tiny dedicated lib, mirrors the shape of
# `uffs-broker-protocol`.  Pure-logic byte-shuffling and enum/struct
# definitions — no Windows FFI, no I/O, no VSS/MFT access.
#
# Shared between `uffs-content` (the privileged VSS-snapshot-scoped Content
# Service producer, Windows-only binary) and any downstream consumer (e.g.
# Docenta) that speaks the framed content protocol. Keeping the contract in
# its own crate means the manifest layout, frame envelope, job/candidate
# state machine, and error taxonomy have one source of truth instead of
# being duplicated by hand on both sides of the wire.
#
# Cross-platform by design: tests run on every CI lane (Linux + macOS +
# Windows). The Windows-only VSS/MFT machinery stays in `uffs-content`'s
# `[[bin]]` where it belongs.
#
# Design references (docs/dev/architecture/, local-only, not tracked):
# the original `content-stream-tool-design.md` sketch, superseded by its
# `uffs-content-stream-enterprise-design-review.md` replacement-design
# review, and Docenta's `uffs-ingest-protocol-v2-vss.md` spec — the
# authoritative sources this crate's types are scaffolded from.
# ============================================================================

[package]
name = "uffs-content-protocol"
description = "UFFS Content Service wire-protocol types (cross-platform, shared by uffs-content + downstream consumers)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
# Intentionally NOT published (yet). This crate defines the manifest +
# framed content wire protocol between `uffs-content` (the privileged
# producer) and a downstream consumer such as Docenta. Reserve the name
# on crates.io to prevent squatting, but never carry content until the
# protocol is stable enough to be a public contract. See
# `crates/uffs-broker-protocol/Cargo.toml` for the precedent.
publish.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Structured error type for `codec::DecodeError`.
thiserror.workspace = true
# Content-integrity digest mandated by the protocol spec (manifest/frame
# checksums + FILE_END content digest) — design-doc §15.1.
blake3.workspace = true
# `CandidateFlags` bitfield (design-doc §11.4: RESIDENT/SPARSE/COMPRESSED/...).
bitflags.workspace = true

[dev-dependencies]
# Round-trip property tests for the manifest/frame codec (§21.6 of the
# design doc: fuzz manifest lengths, frame lengths, offsets, sequence
# numbers).
proptest.workspace = true

[lints]
workspace = true
