# ============================================================================
# uffs-content: UFFS Content Service
# ============================================================================
# Layer 4 App. Privileged, job-oriented process: for one volume/root, it
# creates a VSS snapshot, evaluates a UFFS candidate query against it,
# writes an immutable candidate manifest, and streams the successful
# candidates' logical file content to a downstream consumer (e.g. Docenta)
# over the framed protocol defined by `uffs-content-protocol`.
#
# Invocation model: like `uffsd`, driven by a structured JSON job spec (the
# query/filters/root/quotas), not interactive flags. `uffs-content` is the
# unprivileged coordinator: read-mode planning, manifest handling, protocol
# framing, and output live here; any privileged VSS-snapshot/raw-extent
# capability stays a narrow internal helper (extends `uffs-broker`'s
# pattern), never owned by this binary directly. Design references
# (docs/dev/architecture/, local-only, not tracked): the original
# `content-stream-tool-design.md` sketch, its
# `uffs-content-stream-enterprise-design-review.md` replacement-design
# review, and Docenta's `uffs-ingest-protocol-v2-vss.md`. Scaffold only;
# no VSS/MFT/query logic is wired up yet.
# ============================================================================

[package]
name = "uffs-content"
description = "UFFS Content Service (uffs-content) — VSS-snapshot-scoped file content export for downstream consumers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
# Intentionally NOT published (yet). `uffs-content` is a privileged,
# Windows-only content-export producer with no standalone-useful library
# API outside the UFFS architecture. Reserve the name on crates.io to
# prevent squatting, but never carry content. Mirrors `uffs-broker`'s
# rationale in `crates/uffs-broker/Cargo.toml`.
publish.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-pc-windows-msvc"]
default-target = "x86_64-pc-windows-msvc"

[[bin]]
name = "uffs-content"
path = "src/main.rs"

[lib]
name = "uffs_content"
path = "src/lib.rs"

[dependencies]
uffs-version.workspace = true
# Shared wire-protocol types (manifest, frames, job/candidate states) — see
# `crates/uffs-content-protocol/`.
uffs-content-protocol.workspace = true
# Failure-log records + the finalized run summary — see `src/run/`. Run
# state is intentionally ephemeral (no transactional per-candidate job
# database — see `src/run/mod.rs` for the full rationale), so this is
# the only serialization this crate needs.
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# Job/run identifiers (`ManifestHeader::job_id`, etc.) — see `src/job/`.
uuid.workspace = true
# Structured logging: `workflow::run_job`'s per-candidate content-read
# failure log (`src/job/workflow.rs`) runs in both the cross-platform
# fake-reader pipeline and the Windows-only real VSS pipeline, so this
# stays unconditional even though most other job-pipeline logging below
# is Windows-only. The macros themselves have no OS-specific behavior;
# only installing a subscriber to consume them (`tracing-subscriber`,
# Windows-only below) is Windows-specific.
tracing.workspace = true
# `workflow::read_lease_run_pipelined`'s bounded sliding-window content
# reader: a per-lease-run pool of worker threads pulling candidate
# indices off a bounded input channel and returning results through a
# bounded output channel, so it stays unconditional the same way
# `workflow.rs` itself does (exercised by both the cross-platform fake
# harness and the real Windows VSS pipeline). Already a workspace
# dependency (`uffs-mft`/this crate's own `reader_client.rs` use it the
# same way).
crossbeam-channel.workspace = true

# Windows-only deps: the real Snapshot Manager pipe client
# (`src/job/snapshot_client.rs`) and the real VSS+MFT-query
# `CandidateSource` it backs are meaningful only on Windows (no VSS, no
# live MFT snapshot device, no Broker to talk to elsewhere) — the fake
# `DirWalkCandidateSource`/`FsContentSource` backends remain
# cross-platform. Scoped so a non-Windows build doesn't pull in
# `uffs-broker-protocol`/`uffs-client`, matching `uffs-broker`'s own
# rationale for this split (F5 / issue #205).
#
# Deliberately NOT depending on `uffs-core` here, and not on `uffs-mft`
# for MFT reading/parsing/querying: this crate never reads or queries an
# MFT itself. It leases a VSS snapshot from the Broker, spawns an
# ephemeral `uffsd --device <path>=<letter>` instance to do the actual
# MFT read + query evaluation (the daemon already owns all
# `uffs-mft`/`uffs-core` usage for that), and talks to it over the same
# RPC protocol `uffs-client` already implements for every other UFFS
# client. The one `uffs-mft` dependency below is narrowly scoped to its
# `detect_ntfs_drives` platform helper (a `GetLogicalDrives`/
# `GetVolumeInformationW` check, no MFT involved) for the "no roots
# given, default to every local NTFS drive" case — the same helper
# `uffs-daemon` itself uses for its own no-`--drive`-flag default.
[target.'cfg(windows)'.dependencies]
# Error handling for the pipe client and real VSS-backed CandidateSource
# (`?`/`anyhow::bail!`/`anyhow::anyhow!`) — not used anywhere else in
# this crate today, so scoped alongside the rest of this Windows-only
# group rather than added unconditionally.
anyhow.workspace = true
# `SnapshotManagerRequest`/`SnapshotManagerResponse` wire types and
# `SNAPSHOT_PIPE_NAME` for the Broker's Snapshot Manager pipe.
uffs-broker-protocol.workspace = true
# Spawns the ephemeral `uffsd` instance and queries it over the same
# daemon RPC protocol every other UFFS client uses.
uffs-client.workspace = true
# `detect_ntfs_drives()` only — see the block comment above.
uffs-mft.workspace = true
# Wire types for the private Coordinator<->Snapshot Reader protocol
# (`src/job/reader_client.rs`, `src/job/content_source.rs`'s
# `VssContentSource`).
uffs-content-reader-protocol.workspace = true
# Installs the subscriber consuming this crate's `tracing` events (see
# the unconditional `tracing` dependency above), for the
# `--self-test-*`/`--serve` entry points (`src/main.rs::init_tracing`) —
# matches `uffs-broker`/`uffs-content-reader`'s own `fmt()` init. Scoped
# to Windows only: every entry point that calls `init_tracing()` is
# itself Windows-only (real VSS/Broker/ephemeral-daemon machinery).
tracing-subscriber.workspace = true
# Named-pipe server for the two-pipe transport (`src/serve/`) — every
# other feature this crate needs (`rt`/`sync`/`time`/`io-util`) is
# already unconditional at workspace scope; only `net` (named pipes)
# needs enabling here, matching `uffs-daemon`'s own declaration.
tokio = { workspace = true, features = ["net"] }
# Owner-only pipe DACL + `PipeName` validation for the two-pipe
# transport server (`src/serve/pipe_io.rs`) — the same primitives
# `uffs-daemon`'s and `uffs-content-reader`'s named-pipe servers use.
uffs-security.workspace = true

[build-dependencies]
uffs-version = { workspace = true, features = ["build"] }
winresource.workspace = true

[dev-dependencies]
tempfile.workspace = true
# Independent oracle digest for the E2E dir-walk parity harness
# (`tests/support/plain_walk.rs`) — deliberately calls the `blake3` crate
# directly rather than going through `uffs-content-protocol::codec::digest`,
# so a bug in that wrapper can't hide from the parity test.
blake3.workspace = true

[lints]
workspace = true
