# ============================================================================
# uffs-daemon: Background Service Process
# ============================================================================
# Holds MFT compact index + trigrams in memory, serves queries via IPC
# (Unix domain socket / Windows named pipe). Auto-starts on first client
# connection, auto-retires after idle timeout.
# ============================================================================

[package]
name = "uffs-daemon"
description = "UFFS background daemon (uffsd) — holds MFT index, serves queries via IPC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "uffsd"
path = "src/main.rs"

[lib]
name = "uffs_daemon"
path = "src/lib.rs"

[dependencies]
# Internal
uffs-security.workspace = true
uffs-mft.workspace = true
uffs-core.workspace = true
uffs-client.workspace = true

# Async — `net` re-enabled here because the daemon's IPC server uses
# `tokio::net::UnixListener` (unix) / `NamedPipeServer` (windows).
tokio = { workspace = true, features = ["net"] }

# Serialization (JSON-RPC)
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Platform dirs
dirs-next.workspace = true

# CLI
clap.workspace = true

# Random (nonce generation for shutdown auth)
rand.workspace = true
mimalloc.workspace = true
libmimalloc-sys = { version = "0.1.44", features = ["extended"] }

# Unix PID file liveness check
[target.'cfg(unix)'.dependencies]
libc.workspace = true

# Windows PID file liveness check
[target.'cfg(windows)'.dependencies]
windows.workspace = true

[lints]
workspace = true
